// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`home directories should not render directory entry when showOnHomePage is false 1`] = `
<EuiPage
  data-test-subj="homeApp"
  restrictWidth={1200}
>
  <EuiPageBody
    className="eui-displayBlock"
    component="main"
    restrictWidth={false}
  >
    <EuiScreenReaderOnly>
      <h1>
        <FormattedMessage
          defaultMessage="Kibana home"
          id="kbn.home.welcomeHomePageHeader"
          values={Object {}}
        />
      </h1>
    </EuiScreenReaderOnly>
    <InjectIntl(AddDataUi)
      apmUiEnabled={true}
      isNewKibanaInstance={false}
      mlEnabled={true}
    />
    <EuiSpacer
      size="l"
    />
    <EuiFlexGroup>
      <EuiFlexItem>
        <EuiPanel
          paddingSize="l"
        >
          <EuiTitle
            size="s"
          >
            <h2>
              <FormattedMessage
                defaultMessage="Visualize and Explore Data"
                id="kbn.home.directories.visualize.nameTitle"
                values={Object {}}
              />
            </h2>
          </EuiTitle>
          <EuiSpacer
            size="m"
          />
          <EuiFlexGrid
            columns={2}
            gutterSize="s"
          />
        </EuiPanel>
      </EuiFlexItem>
      <EuiFlexItem>
        <EuiPanel
          paddingSize="l"
        >
          <EuiTitle
            size="s"
          >
            <h2>
              <FormattedMessage
                defaultMessage="Manage and Administer the Elastic Stack"
                id="kbn.home.directories.manage.nameTitle"
                values={Object {}}
              />
            </h2>
          </EuiTitle>
          <EuiSpacer
            size="m"
          />
          <EuiFlexGrid
            columns={2}
          />
        </EuiPanel>
      </EuiFlexItem>
    </EuiFlexGroup>
    <EuiSpacer
      size="l"
    />
    <EuiFlexGroup
      justifyContent="center"
    >
      <EuiFlexItem
        className="eui-textCenter"
        grow={false}
      >
        <EuiText
          color="subdued"
          size="s"
        >
          <p>
            <FormattedMessage
              defaultMessage="Didn’t find what you were looking for?"
              id="kbn.home.directories.notFound.description"
              values={Object {}}
            />
          </p>
        </EuiText>
        <EuiSpacer
          size="s"
        />
        <EuiButton
          href="#/home/feature_directory"
        >
          <FormattedMessage
            defaultMessage="View full directory of Kibana plugins"
            id="kbn.home.directories.notFound.viewFullButtonLabel"
            values={Object {}}
          />
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiPageBody>
</EuiPage>
`;

exports[`home directories should render ADMIN directory entry in "Manage" panel 1`] = `
<EuiPage
  data-test-subj="homeApp"
  restrictWidth={1200}
>
  <EuiPageBody
    className="eui-displayBlock"
    component="main"
    restrictWidth={false}
  >
    <EuiScreenReaderOnly>
      <h1>
        <FormattedMessage
          defaultMessage="Kibana home"
          id="kbn.home.welcomeHomePageHeader"
          values={Object {}}
        />
      </h1>
    </EuiScreenReaderOnly>
    <InjectIntl(AddDataUi)
      apmUiEnabled={true}
      isNewKibanaInstance={false}
      mlEnabled={true}
    />
    <EuiSpacer
      size="l"
    />
    <EuiFlexGroup>
      <EuiFlexItem>
        <EuiPanel
          paddingSize="l"
        >
          <EuiTitle
            size="s"
          >
            <h2>
              <FormattedMessage
                defaultMessage="Visualize and Explore Data"
                id="kbn.home.directories.visualize.nameTitle"
                values={Object {}}
              />
            </h2>
          </EuiTitle>
          <EuiSpacer
            size="m"
          />
          <EuiFlexGrid
            columns={2}
            gutterSize="s"
          />
        </EuiPanel>
      </EuiFlexItem>
      <EuiFlexItem>
        <EuiPanel
          paddingSize="l"
        >
          <EuiTitle
            size="s"
          >
            <h2>
              <FormattedMessage
                defaultMessage="Manage and Administer the Elastic Stack"
                id="kbn.home.directories.manage.nameTitle"
                values={Object {}}
              />
            </h2>
          </EuiTitle>
          <EuiSpacer
            size="m"
          />
          <EuiFlexGrid
            columns={2}
          >
            <EuiFlexItem
              className="homHome__synopsisItem"
              key="index_patterns"
            >
              <Synopsis
                description="Manage the index patterns that help retrieve your data from Elasticsearch."
                iconType="indexPatternApp"
                isBeta={false}
                title="Index Patterns"
                url="base_path/index_management_landing_page"
              />
            </EuiFlexItem>
          </EuiFlexGrid>
        </EuiPanel>
      </EuiFlexItem>
    </EuiFlexGroup>
    <EuiSpacer
      size="l"
    />
    <EuiFlexGroup
      justifyContent="center"
    >
      <EuiFlexItem
        className="eui-textCenter"
        grow={false}
      >
        <EuiText
          color="subdued"
          size="s"
        >
          <p>
            <FormattedMessage
              defaultMessage="Didn’t find what you were looking for?"
              id="kbn.home.directories.notFound.description"
              values={Object {}}
            />
          </p>
        </EuiText>
        <EuiSpacer
          size="s"
        />
        <EuiButton
          href="#/home/feature_directory"
        >
          <FormattedMessage
            defaultMessage="View full directory of Kibana plugins"
            id="kbn.home.directories.notFound.viewFullButtonLabel"
            values={Object {}}
          />
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiPageBody>
</EuiPage>
`;

exports[`home directories should render DATA directory entry in "Explore Data" panel 1`] = `
<EuiPage
  data-test-subj="homeApp"
  restrictWidth={1200}
>
  <EuiPageBody
    className="eui-displayBlock"
    component="main"
    restrictWidth={false}
  >
    <EuiScreenReaderOnly>
      <h1>
        <FormattedMessage
          defaultMessage="Kibana home"
          id="kbn.home.welcomeHomePageHeader"
          values={Object {}}
        />
      </h1>
    </EuiScreenReaderOnly>
    <InjectIntl(AddDataUi)
      apmUiEnabled={true}
      isNewKibanaInstance={false}
      mlEnabled={true}
    />
    <EuiSpacer
      size="l"
    />
    <EuiFlexGroup>
      <EuiFlexItem>
        <EuiPanel
          paddingSize="l"
        >
          <EuiTitle
            size="s"
          >
            <h2>
              <FormattedMessage
                defaultMessage="Visualize and Explore Data"
                id="kbn.home.directories.visualize.nameTitle"
                values={Object {}}
              />
            </h2>
          </EuiTitle>
          <EuiSpacer
            size="m"
          />
          <EuiFlexGrid
            columns={2}
            gutterSize="s"
          >
            <EuiFlexItem
              className="homHome__synopsisItem"
              key="dashboard"
            >
              <Synopsis
                description="Display and share a collection of visualizations and saved searches."
                iconType="dashboardApp"
                isBeta={false}
                title="Dashboard"
                url="base_path/dashboard_landing_page"
              />
            </EuiFlexItem>
          </EuiFlexGrid>
        </EuiPanel>
      </EuiFlexItem>
      <EuiFlexItem>
        <EuiPanel
          paddingSize="l"
        >
          <EuiTitle
            size="s"
          >
            <h2>
              <FormattedMessage
                defaultMessage="Manage and Administer the Elastic Stack"
                id="kbn.home.directories.manage.nameTitle"
                values={Object {}}
              />
            </h2>
          </EuiTitle>
          <EuiSpacer
            size="m"
          />
          <EuiFlexGrid
            columns={2}
          />
        </EuiPanel>
      </EuiFlexItem>
    </EuiFlexGroup>
    <EuiSpacer
      size="l"
    />
    <EuiFlexGroup
      justifyContent="center"
    >
      <EuiFlexItem
        className="eui-textCenter"
        grow={false}
      >
        <EuiText
          color="subdued"
          size="s"
        >
          <p>
            <FormattedMessage
              defaultMessage="Didn’t find what you were looking for?"
              id="kbn.home.directories.notFound.description"
              values={Object {}}
            />
          </p>
        </EuiText>
        <EuiSpacer
          size="s"
        />
        <EuiButton
          href="#/home/feature_directory"
        >
          <FormattedMessage
            defaultMessage="View full directory of Kibana plugins"
            id="kbn.home.directories.notFound.viewFullButtonLabel"
            values={Object {}}
          />
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiPageBody>
</EuiPage>
`;

exports[`home isNewKibanaInstance should safely handle execeptions 1`] = `
<EuiPage
  data-test-subj="homeApp"
  restrictWidth={1200}
>
  <EuiPageBody
    className="eui-displayBlock"
    component="main"
    restrictWidth={false}
  >
    <EuiScreenReaderOnly>
      <h1>
        <FormattedMessage
          defaultMessage="Kibana home"
          id="kbn.home.welcomeHomePageHeader"
          values={Object {}}
        />
      </h1>
    </EuiScreenReaderOnly>
    <InjectIntl(AddDataUi)
      apmUiEnabled={true}
      isNewKibanaInstance={false}
      mlEnabled={true}
    />
    <EuiSpacer
      size="l"
    />
    <EuiFlexGroup>
      <EuiFlexItem>
        <EuiPanel
          paddingSize="l"
        >
          <EuiTitle
            size="s"
          >
            <h2>
              <FormattedMessage
                defaultMessage="Visualize and Explore Data"
                id="kbn.home.directories.visualize.nameTitle"
                values={Object {}}
              />
            </h2>
          </EuiTitle>
          <EuiSpacer
            size="m"
          />
          <EuiFlexGrid
            columns={2}
            gutterSize="s"
          />
        </EuiPanel>
      </EuiFlexItem>
      <EuiFlexItem>
        <EuiPanel
          paddingSize="l"
        >
          <EuiTitle
            size="s"
          >
            <h2>
              <FormattedMessage
                defaultMessage="Manage and Administer the Elastic Stack"
                id="kbn.home.directories.manage.nameTitle"
                values={Object {}}
              />
            </h2>
          </EuiTitle>
          <EuiSpacer
            size="m"
          />
          <EuiFlexGrid
            columns={2}
          />
        </EuiPanel>
      </EuiFlexItem>
    </EuiFlexGroup>
    <EuiSpacer
      size="l"
    />
    <EuiFlexGroup
      justifyContent="center"
    >
      <EuiFlexItem
        className="eui-textCenter"
        grow={false}
      >
        <EuiText
          color="subdued"
          size="s"
        >
          <p>
            <FormattedMessage
              defaultMessage="Didn’t find what you were looking for?"
              id="kbn.home.directories.notFound.description"
              values={Object {}}
            />
          </p>
        </EuiText>
        <EuiSpacer
          size="s"
        />
        <EuiButton
          href="#/home/feature_directory"
        >
          <FormattedMessage
            defaultMessage="View full directory of Kibana plugins"
            id="kbn.home.directories.notFound.viewFullButtonLabel"
            values={Object {}}
          />
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiPageBody>
</EuiPage>
`;

exports[`home isNewKibanaInstance should set isNewKibanaInstance to false when there are index patterns 1`] = `
<EuiPage
  data-test-subj="homeApp"
  restrictWidth={1200}
>
  <EuiPageBody
    className="eui-displayBlock"
    component="main"
    restrictWidth={false}
  >
    <EuiScreenReaderOnly>
      <h1>
        <FormattedMessage
          defaultMessage="Kibana home"
          id="kbn.home.welcomeHomePageHeader"
          values={Object {}}
        />
      </h1>
    </EuiScreenReaderOnly>
    <InjectIntl(AddDataUi)
      apmUiEnabled={true}
      isNewKibanaInstance={false}
      mlEnabled={true}
    />
    <EuiSpacer
      size="l"
    />
    <EuiFlexGroup>
      <EuiFlexItem>
        <EuiPanel
          paddingSize="l"
        >
          <EuiTitle
            size="s"
          >
            <h2>
              <FormattedMessage
                defaultMessage="Visualize and Explore Data"
                id="kbn.home.directories.visualize.nameTitle"
                values={Object {}}
              />
            </h2>
          </EuiTitle>
          <EuiSpacer
            size="m"
          />
          <EuiFlexGrid
            columns={2}
            gutterSize="s"
          />
        </EuiPanel>
      </EuiFlexItem>
      <EuiFlexItem>
        <EuiPanel
          paddingSize="l"
        >
          <EuiTitle
            size="s"
          >
            <h2>
              <FormattedMessage
                defaultMessage="Manage and Administer the Elastic Stack"
                id="kbn.home.directories.manage.nameTitle"
                values={Object {}}
              />
            </h2>
          </EuiTitle>
          <EuiSpacer
            size="m"
          />
          <EuiFlexGrid
            columns={2}
          />
        </EuiPanel>
      </EuiFlexItem>
    </EuiFlexGroup>
    <EuiSpacer
      size="l"
    />
    <EuiFlexGroup
      justifyContent="center"
    >
      <EuiFlexItem
        className="eui-textCenter"
        grow={false}
      >
        <EuiText
          color="subdued"
          size="s"
        >
          <p>
            <FormattedMessage
              defaultMessage="Didn’t find what you were looking for?"
              id="kbn.home.directories.notFound.description"
              values={Object {}}
            />
          </p>
        </EuiText>
        <EuiSpacer
          size="s"
        />
        <EuiButton
          href="#/home/feature_directory"
        >
          <FormattedMessage
            defaultMessage="View full directory of Kibana plugins"
            id="kbn.home.directories.notFound.viewFullButtonLabel"
            values={Object {}}
          />
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiPageBody>
</EuiPage>
`;

exports[`home isNewKibanaInstance should set isNewKibanaInstance to true when there are no index patterns 1`] = `
<EuiPage
  data-test-subj="homeApp"
  restrictWidth={1200}
>
  <EuiPageBody
    className="eui-displayBlock"
    component="main"
    restrictWidth={false}
  >
    <EuiScreenReaderOnly>
      <h1>
        <FormattedMessage
          defaultMessage="Kibana home"
          id="kbn.home.welcomeHomePageHeader"
          values={Object {}}
        />
      </h1>
    </EuiScreenReaderOnly>
    <InjectIntl(AddDataUi)
      apmUiEnabled={true}
      isNewKibanaInstance={true}
      mlEnabled={true}
    />
    <EuiSpacer
      size="l"
    />
    <EuiFlexGroup>
      <EuiFlexItem>
        <EuiPanel
          paddingSize="l"
        >
          <EuiTitle
            size="s"
          >
            <h2>
              <FormattedMessage
                defaultMessage="Visualize and Explore Data"
                id="kbn.home.directories.visualize.nameTitle"
                values={Object {}}
              />
            </h2>
          </EuiTitle>
          <EuiSpacer
            size="m"
          />
          <EuiFlexGrid
            columns={2}
            gutterSize="s"
          />
        </EuiPanel>
      </EuiFlexItem>
      <EuiFlexItem>
        <EuiPanel
          paddingSize="l"
        >
          <EuiTitle
            size="s"
          >
            <h2>
              <FormattedMessage
                defaultMessage="Manage and Administer the Elastic Stack"
                id="kbn.home.directories.manage.nameTitle"
                values={Object {}}
              />
            </h2>
          </EuiTitle>
          <EuiSpacer
            size="m"
          />
          <EuiFlexGrid
            columns={2}
          />
        </EuiPanel>
      </EuiFlexItem>
    </EuiFlexGroup>
    <EuiSpacer
      size="l"
    />
    <EuiFlexGroup
      justifyContent="center"
    >
      <EuiFlexItem
        className="eui-textCenter"
        grow={false}
      >
        <EuiText
          color="subdued"
          size="s"
        >
          <p>
            <FormattedMessage
              defaultMessage="Didn’t find what you were looking for?"
              id="kbn.home.directories.notFound.description"
              values={Object {}}
            />
          </p>
        </EuiText>
        <EuiSpacer
          size="s"
        />
        <EuiButton
          href="#/home/feature_directory"
        >
          <FormattedMessage
            defaultMessage="View full directory of Kibana plugins"
            id="kbn.home.directories.notFound.viewFullButtonLabel"
            values={Object {}}
          />
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiPageBody>
</EuiPage>
`;

exports[`home should render home component 1`] = `
<EuiPage
  data-test-subj="homeApp"
  restrictWidth={1200}
>
  <EuiPageBody
    className="eui-displayBlock"
    component="main"
    restrictWidth={false}
  >
    <EuiScreenReaderOnly>
      <h1>
        <FormattedMessage
          defaultMessage="Kibana home"
          id="kbn.home.welcomeHomePageHeader"
          values={Object {}}
        />
      </h1>
    </EuiScreenReaderOnly>
    <InjectIntl(AddDataUi)
      apmUiEnabled={true}
      isNewKibanaInstance={false}
      mlEnabled={true}
    />
    <EuiSpacer
      size="l"
    />
    <EuiFlexGroup>
      <EuiFlexItem>
        <EuiPanel
          paddingSize="l"
        >
          <EuiTitle
            size="s"
          >
            <h2>
              <FormattedMessage
                defaultMessage="Visualize and Explore Data"
                id="kbn.home.directories.visualize.nameTitle"
                values={Object {}}
              />
            </h2>
          </EuiTitle>
          <EuiSpacer
            size="m"
          />
          <EuiFlexGrid
            columns={2}
            gutterSize="s"
          />
        </EuiPanel>
      </EuiFlexItem>
      <EuiFlexItem>
        <EuiPanel
          paddingSize="l"
        >
          <EuiTitle
            size="s"
          >
            <h2>
              <FormattedMessage
                defaultMessage="Manage and Administer the Elastic Stack"
                id="kbn.home.directories.manage.nameTitle"
                values={Object {}}
              />
            </h2>
          </EuiTitle>
          <EuiSpacer
            size="m"
          />
          <EuiFlexGrid
            columns={2}
          />
        </EuiPanel>
      </EuiFlexItem>
    </EuiFlexGroup>
    <EuiSpacer
      size="l"
    />
    <EuiFlexGroup
      justifyContent="center"
    >
      <EuiFlexItem
        className="eui-textCenter"
        grow={false}
      >
        <EuiText
          color="subdued"
          size="s"
        >
          <p>
            <FormattedMessage
              defaultMessage="Didn’t find what you were looking for?"
              id="kbn.home.directories.notFound.description"
              values={Object {}}
            />
          </p>
        </EuiText>
        <EuiSpacer
          size="s"
        />
        <EuiButton
          href="#/home/feature_directory"
        >
          <FormattedMessage
            defaultMessage="View full directory of Kibana plugins"
            id="kbn.home.directories.notFound.viewFullButtonLabel"
            values={Object {}}
          />
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiPageBody>
</EuiPage>
`;

exports[`home welcome should show the normal home page if loading fails 1`] = `
<EuiPage
  data-test-subj="homeApp"
  restrictWidth={1200}
>
  <EuiPageBody
    className="eui-displayBlock"
    component="main"
    restrictWidth={false}
  >
    <EuiScreenReaderOnly>
      <h1>
        <FormattedMessage
          defaultMessage="Kibana home"
          id="kbn.home.welcomeHomePageHeader"
          values={Object {}}
        />
      </h1>
    </EuiScreenReaderOnly>
    <InjectIntl(AddDataUi)
      apmUiEnabled={true}
      isNewKibanaInstance={false}
      mlEnabled={true}
    />
    <EuiSpacer
      size="l"
    />
    <EuiFlexGroup>
      <EuiFlexItem>
        <EuiPanel
          paddingSize="l"
        >
          <EuiTitle
            size="s"
          >
            <h2>
              <FormattedMessage
                defaultMessage="Visualize and Explore Data"
                id="kbn.home.directories.visualize.nameTitle"
                values={Object {}}
              />
            </h2>
          </EuiTitle>
          <EuiSpacer
            size="m"
          />
          <EuiFlexGrid
            columns={2}
            gutterSize="s"
          />
        </EuiPanel>
      </EuiFlexItem>
      <EuiFlexItem>
        <EuiPanel
          paddingSize="l"
        >
          <EuiTitle
            size="s"
          >
            <h2>
              <FormattedMessage
                defaultMessage="Manage and Administer the Elastic Stack"
                id="kbn.home.directories.manage.nameTitle"
                values={Object {}}
              />
            </h2>
          </EuiTitle>
          <EuiSpacer
            size="m"
          />
          <EuiFlexGrid
            columns={2}
          />
        </EuiPanel>
      </EuiFlexItem>
    </EuiFlexGroup>
    <EuiSpacer
      size="l"
    />
    <EuiFlexGroup
      justifyContent="center"
    >
      <EuiFlexItem
        className="eui-textCenter"
        grow={false}
      >
        <EuiText
          color="subdued"
          size="s"
        >
          <p>
            <FormattedMessage
              defaultMessage="Didn’t find what you were looking for?"
              id="kbn.home.directories.notFound.description"
              values={Object {}}
            />
          </p>
        </EuiText>
        <EuiSpacer
          size="s"
        />
        <EuiButton
          href="#/home/feature_directory"
        >
          <FormattedMessage
            defaultMessage="View full directory of Kibana plugins"
            id="kbn.home.directories.notFound.viewFullButtonLabel"
            values={Object {}}
          />
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiPageBody>
</EuiPage>
`;

exports[`home welcome should show the normal home page if welcome screen is disabled locally 1`] = `
<EuiPage
  data-test-subj="homeApp"
  restrictWidth={1200}
>
  <EuiPageBody
    className="eui-displayBlock"
    component="main"
    restrictWidth={false}
  >
    <EuiScreenReaderOnly>
      <h1>
        <FormattedMessage
          defaultMessage="Kibana home"
          id="kbn.home.welcomeHomePageHeader"
          values={Object {}}
        />
      </h1>
    </EuiScreenReaderOnly>
    <InjectIntl(AddDataUi)
      apmUiEnabled={true}
      isNewKibanaInstance={false}
      mlEnabled={true}
    />
    <EuiSpacer
      size="l"
    />
    <EuiFlexGroup>
      <EuiFlexItem>
        <EuiPanel
          paddingSize="l"
        >
          <EuiTitle
            size="s"
          >
            <h2>
              <FormattedMessage
                defaultMessage="Visualize and Explore Data"
                id="kbn.home.directories.visualize.nameTitle"
                values={Object {}}
              />
            </h2>
          </EuiTitle>
          <EuiSpacer
            size="m"
          />
          <EuiFlexGrid
            columns={2}
            gutterSize="s"
          />
        </EuiPanel>
      </EuiFlexItem>
      <EuiFlexItem>
        <EuiPanel
          paddingSize="l"
        >
          <EuiTitle
            size="s"
          >
            <h2>
              <FormattedMessage
                defaultMessage="Manage and Administer the Elastic Stack"
                id="kbn.home.directories.manage.nameTitle"
                values={Object {}}
              />
            </h2>
          </EuiTitle>
          <EuiSpacer
            size="m"
          />
          <EuiFlexGrid
            columns={2}
          />
        </EuiPanel>
      </EuiFlexItem>
    </EuiFlexGroup>
    <EuiSpacer
      size="l"
    />
    <EuiFlexGroup
      justifyContent="center"
    >
      <EuiFlexItem
        className="eui-textCenter"
        grow={false}
      >
        <EuiText
          color="subdued"
          size="s"
        >
          <p>
            <FormattedMessage
              defaultMessage="Didn’t find what you were looking for?"
              id="kbn.home.directories.notFound.description"
              values={Object {}}
            />
          </p>
        </EuiText>
        <EuiSpacer
          size="s"
        />
        <EuiButton
          href="#/home/feature_directory"
        >
          <FormattedMessage
            defaultMessage="View full directory of Kibana plugins"
            id="kbn.home.directories.notFound.viewFullButtonLabel"
            values={Object {}}
          />
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiPageBody>
</EuiPage>
`;

exports[`home welcome should show the welcome screen if enabled, and there are no index patterns defined 1`] = `
<Welcome
  onOptInSeen={[Function]}
  onSkip={[Function]}
  urlBasePath="goober"
/>
`;

exports[`home welcome stores skip welcome setting if skipped 1`] = `
<EuiPage
  data-test-subj="homeApp"
  restrictWidth={1200}
>
  <EuiPageBody
    className="eui-displayBlock"
    component="main"
    restrictWidth={false}
  >
    <EuiScreenReaderOnly>
      <h1>
        <FormattedMessage
          defaultMessage="Kibana home"
          id="kbn.home.welcomeHomePageHeader"
          values={Object {}}
        />
      </h1>
    </EuiScreenReaderOnly>
    <InjectIntl(AddDataUi)
      apmUiEnabled={true}
      isNewKibanaInstance={true}
      mlEnabled={true}
    />
    <EuiSpacer
      size="l"
    />
    <EuiFlexGroup>
      <EuiFlexItem>
        <EuiPanel
          paddingSize="l"
        >
          <EuiTitle
            size="s"
          >
            <h2>
              <FormattedMessage
                defaultMessage="Visualize and Explore Data"
                id="kbn.home.directories.visualize.nameTitle"
                values={Object {}}
              />
            </h2>
          </EuiTitle>
          <EuiSpacer
            size="m"
          />
          <EuiFlexGrid
            columns={2}
            gutterSize="s"
          />
        </EuiPanel>
      </EuiFlexItem>
      <EuiFlexItem>
        <EuiPanel
          paddingSize="l"
        >
          <EuiTitle
            size="s"
          >
            <h2>
              <FormattedMessage
                defaultMessage="Manage and Administer the Elastic Stack"
                id="kbn.home.directories.manage.nameTitle"
                values={Object {}}
              />
            </h2>
          </EuiTitle>
          <EuiSpacer
            size="m"
          />
          <EuiFlexGrid
            columns={2}
          />
        </EuiPanel>
      </EuiFlexItem>
    </EuiFlexGroup>
    <EuiSpacer
      size="l"
    />
    <EuiFlexGroup
      justifyContent="center"
    >
      <EuiFlexItem
        className="eui-textCenter"
        grow={false}
      >
        <EuiText
          color="subdued"
          size="s"
        >
          <p>
            <FormattedMessage
              defaultMessage="Didn’t find what you were looking for?"
              id="kbn.home.directories.notFound.description"
              values={Object {}}
            />
          </p>
        </EuiText>
        <EuiSpacer
          size="s"
        />
        <EuiButton
          href="#/home/feature_directory"
        >
          <FormattedMessage
            defaultMessage="View full directory of Kibana plugins"
            id="kbn.home.directories.notFound.viewFullButtonLabel"
            values={Object {}}
          />
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiPageBody>
</EuiPage>
`;
